test/conformance/chainsaw/verify-images/clusterpolicy/standard/keyless-nomutatedigest-noverifydigest-norequired/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zulu
  namespace: default
spec:
  containers:
  - image: ghcr.io/kyverno/zulu
    name: zulu
