test/conformance/chainsaw/verify-images/clusterpolicy/standard/keyless-nomutatedigest-noverifydigest-norequired/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: keyless-nomutatedigest-noverifydigest-norequired
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: keyless-nomutatedigest-noverifydigest-norequired
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1.yaml
